--- a/de.dhbw.horb.ksm.tableeditor/plugin.xml
+++ b/de.dhbw.horb.ksm.tableeditor/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
-<fragment>
-   <extension
+<plugin>
+  <extension
          point="org.eclipse.ui.views">
       <view
             category="ksm.core.views.KSMCategory"
@@ -25,4 +25,4 @@
          </description>
       </perspective>
    </extension>
-</fragment>
+</plugin>
